--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,8 +1,8 @@
 [init]
-	defaultBranch = master
+	defaultBranch = main
 [user]
-	name = Massiccio1
-	email = girardellimassimo@gmail.com
+	name = Massimo Girardelli
+	email = massimo.girardelli@starsystem.biz
 [safe]
 	directory = /shared
 [core]
@@ -29,3 +29,8 @@
 	lf = log --pretty=lf --graph
 	ls = log --pretty=lf --graph --cc --stat
 	ll = log --pretty=lf --graph --cc --patch
+[credential]
+	helper = 
+	helper = /usr/local/bin/git-credential-manager
+[credential "https://dev.azure.com"]
+	useHttpPath = true
